--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "mint-ui": "^2.2.13",
     "moment": "^2.24.0",
     "vue": "^2.5.2",
+    "vue-preview": "^1.1.3",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
